Fix align of name & social-links in header.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,10 +87,8 @@ h1, h2, h3, h4, h5, h6 {
 #header .profile h1 {
   font-size: 24px;
   margin: 0;
-  padding: 0;
+  padding: 30px 15px;
   font-weight: 600;
-  -moz-text-align-last: center;
-  text-align-last: center;
   font-family: "Poppins", sans-serif;
 }
 
@@ -100,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .profile .social-links a {
-  font-size: 18px;
+  font-size: 24px;
   display: inline-block;
   color: #999;
   line-height: 1;
